# podex

./: .env.example  .env.staging.example  .gitguardian.yaml  .gitignore  .gitleaks.toml  .gitleaksignore  .hadolint.yaml  .lintro-ignore  .markdownlint-cli2.jsonc  .osv-scanner.toml  .sqlfluff  .sqlfluffignore  .trivyignore  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES  docker-compose.staging.yml  docker-compose.yml  justfile  podcasts.yaml  pyproject.toml  renovate.json
backend/: .dockerignore  .env.example  .lintro-config.yaml  Dockerfile  README.md  alembic.ini  podex.db  pyproject.toml
backend/.semgrep/: prompt-boundary.yaml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_catalog.py  0002_hot_query_indexes.py  0003_add_ingestion_runs.py  0004_add_discovery_tracking.py  0005_add_scheduled_work.py  0006_add_extraction_models.py  0007_add_media_alias_refs.py  0008_add_media_enrichment_columns.py  0009_add_media_relations.py  0010_add_derivative_models.py  0011_add_retention_models.py  0012_add_account_models.py  0013_add_account_alert_and_digest_models.py  0014_add_billing_models.py  0015_add_audit_log_and_cover_url.py  0016_add_takedown_requests.py  0017_carry_email_on_magic_link_tokens.py  0018_add_workos_identity.py  0019_add_billing_webhook_events.py  001_initial.py  002_add_transcripts.py  003_add_ingestion_runs.py  004_add_transcription_tracking.py  005_add_media_composite_index.py  006_add_media_external_ids.py  007_add_discovery_tracking.py  008_add_enrichment_tracking.py  009_add_verification_tracking.py  010_add_performance_indexes.py  011_add_review_and_audit_models.py  012_add_mention_candidate_provenance.py  013_add_search_projection_repairs.py  014_add_scheduler_retention_aliases.py  015_add_semantic_chunks.py  016_add_graph_triples.py  017_add_derivative_summaries.py  018_add_derivative_generation_runs.py  019_add_retention_sampling_assignment.py  020_add_transcript_digests.py  021_add_transcript_artifacts.py  (+11 more)
backend/scripts/: browse_podscripts.py  cleanup_transcripts_llm.py  compare_transcripts.py  discover_episodes.py  enrich_media.py  extract_mentions_llm.py  ingest_transcripts_whisper.py  ingest_youtube_episodes.py  load_test_core.py  manage_podcasts.py  process_url.py  scrape_podscripts.py  start.sh  status_report.py  sync_search.py  transcribe_local_videos.py
backend/src/podex/: __init__.py  config.py  database.py  logging_config.py  main.py  metrics.py  middleware.py  observability.py  openapi.py  scheduler_runner.py
backend/src/podex/api/: deps.py  episodes.py  media.py  podcasts.py  query_helpers.py  rate_limits.py  router.py  search.py  stats.py  status.py
backend/src/podex/models/: __init__.py  account_alert_event.py  account_alert_rule.py  account_digest.py  account_followed_podcast.py  account_preference.py  account_quota_usage.py  account_saved_media.py  account_subscription.py  account_user.py  audit_log.py  base.py  billing_webhook_event.py  derivative_generation_run.py  derivative_summary.py  editorial_collection.py  episode.py  episode_summary.py  graph_triple.py  ingestion_run.py  magic_link_token.py  media.py  media_alias.py  media_external_ref.py  media_relation.py  media_summary.py  mention.py  mention_candidate.py  mention_candidate_provenance.py  podcast.py  review_item.py  scheduled_work.py  search_analytics_event.py  search_projection_repair.py  semantic_chunk.py  takedown_request.py  transcript.py  transcript_artifact.py  transcript_digest.py  transcript_source_retention_policy.py  (+2 more)
backend/src/podex/schemas/: __init__.py  account.py  billing.py  episode.py  ingestion_run.py  media.py  mention.py  ops.py  podcast.py  stats.py  transcript.py
backend/src/podex/services/: __init__.py  academic_enrichment.py  account_alerts.py  account_auth.py  account_digests.py  account_follows.py  account_preferences.py  account_privacy.py  account_saves.py  account_subscriptions.py  admin_settings.py  audit_log.py  billing_checkout.py  billing_webhooks.py  cache.py  derivative_coverage.py  derivative_generation.py  derivative_summaries.py  discovery.py  discovery_orchestrator.py  discovery_podscripts.py  discovery_rss.py  discovery_spotify.py  episode_iterator.py  episode_queries.py  extraction.py  extraction_review.py  graph_relations.py  limiter.py  limiter_factory.py  llm_extraction.py  llm_transcript_cleanup.py  load_testing.py  magic_link_delivery.py  media_alias_repository.py  media_aliases.py  media_enrichment.py  media_enrichment_pipeline.py  media_queries.py  notification_delivery.py  (+47 more)
backend/tests/: conftest.py  test_acceptance_catalog.py  test_account_alerts_digests.py  test_account_auth.py  test_account_personalization.py  test_account_privacy.py  test_api_auth.py  test_api_ops.py  test_api_smoke.py  test_billing_paddle.py  test_billing_subscriptions.py  test_cache.py  test_config.py  test_database.py  test_derivative_generation.py  test_derivative_models.py  test_derivative_summaries.py  test_discovery_orchestrator.py  test_discovery_providers.py  test_discovery_tracking.py  test_enrichment_provider_matrix.py  test_enrichment_providers.py  test_episodes.py  test_error_envelope.py  test_extraction_models.py  test_extraction_review.py  test_extraction_service.py  test_graph_relations.py  test_health.py  test_identifiers.py  test_ingestion_runs.py  test_limiter.py  test_llm_extraction.py  test_load_test_core.py  test_media.py  test_media_alias_models.py  test_media_alias_repository.py  test_media_aliases.py  test_media_enricher.py  test_media_enrichment_pipeline.py  (+36 more)
backend/tests/enrichment/: __init__.py  conftest.py  test_enricher_orchestration.py  test_enrichment_data.py  test_enrichment_provider_matrix.py  test_provider_academic.py  test_provider_books.py  test_provider_itunes.py  test_provider_omdb.py  test_provider_registry.py  test_provider_tmdb.py  test_provider_wikipedia.py
backend/tests/test_api/: test_episodes_api.py  test_media_api.py  test_podcasts_api.py  test_stats_api.py  test_v2_api.py  test_v2_auth.py
(+196 files in other folders)
