[project]
name = "podex"
version = "0.1.0"
description = "Podcast Media Index - Track media mentioned in podcasts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "yt-dlp>=2024.8.6",
  "python-dotenv>=1.0.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.14.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.18",
  "slowapi>=0.1.9",
  "structlog>=24.1.0",
  "psycopg2-binary>=2.9.0",
  # Discovery & config
  "feedparser>=6.0",
  "rapidfuzz>=3.0",
  "pyyaml>=6.0",
  "beautifulsoup4>=4.12.0",
  "meilisearch>=0.31.0",
  "cryptography>=48.0.0",
  "boto3>=1.43.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "assertpy>=1.1",
  "ruff>=0.8.0",
  "types-pyyaml>=6.0.12.20260510",
]
# Whisper transcription backends
whisper = ["faster-whisper>=1.0.0", "openai>=1.0.0", "groq>=0.4.0"]
# Spotify discovery (optional)
spotify = ["spotipy>=2.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podex"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "B008", # Allow Depends() and Query() in function defaults (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "SIM117", "SIM105"]
"scripts/**/*.py" = [
  "E402",
  "E501",
] # Allow imports after sys.path, log messages can be long

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.bandit]
exclude_dirs = ["tests"]
# B101: assert used for internal validation, acceptable in non-optimized builds
# B404/B603/B607: subprocess used safely with shell=False for yt-dlp, whisper
# B108: hardcoded tmp paths are intentional for audio processing
# B314/B405: XML parsing (defusedxml not needed for RSS feeds from trusted sources)
skips = ["B101", "B404", "B603", "B607", "B108", "B314", "B405"]

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
check-return-types = false
check-arg-order = true
skip-checking-short-docstrings = true
allow-init-docstring = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
# plugins require deps installed, disabled for lintro Docker environment
# plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "feedparser.*",
  "meilisearch.*",
  "rapidfuzz.*",
  "bs4.*",
  "spotipy.*",
  "faster_whisper.*",
  "groq.*",
  "yt_dlp.*",
  "slowapi.*",
  "boto3.*",
  "botocore.*",
  "pydantic.*",
  "pydantic_settings.*",
  "sqlalchemy.*",
  "alembic.*",
]
ignore_missing_imports = true

# API modules use slowapi decorators which are untyped
[[tool.mypy.overrides]]
module = ["podex.api.*", "podex.main"]
disallow_untyped_decorators = false
warn_return_any = false
# misc: slowapi/FastAPI metaclass issues; untyped-decorator: slowapi @limiter
disable_error_code = ["misc", "untyped-decorator"]

# Service modules with heavy SQLAlchemy usage
[[tool.mypy.overrides]]
module = [
  "podex.services.episode_iterator",
  "podex.services.discovery_orchestrator",
  "podex.services.search.*",
]
warn_return_any = false
