[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podex"
version = "0.1.0"
description = "Podex backend — podcast media-index API and ingestion pipeline."
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [{ name = "lgtm-hq", email = "turbocoder13@gmail.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
]

[project.urls]
Homepage = "https://github.com/lgtm-hq/podex"
Source = "https://github.com/lgtm-hq/podex"
Issues = "https://github.com/lgtm-hq/podex/issues"

[dependency-groups]
dev = [
  "assertpy>=1.1",
  "httpx>=0.28",
  "lintro==0.64.5",
  "mypy>=1.14",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "types-assertpy>=1.1.0.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/podex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]

[tool.coverage.run]
source = ["src/podex"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
strict = true

[tool.lintro]
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
