[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podex"
version = "0.35.0"
description = "Podex backend — podcast media-index API and ingestion pipeline."
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [{ name = "lgtm-hq", email = "turbocoder13@gmail.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "redis>=5.0",
  "httpx>=0.28",
  "feedparser>=6.0",
  "beautifulsoup4>=4.12",
  "rapidfuzz>=3.9",
  "spotipy>=2.24",
  "anthropic>=0.40",
  "cryptography>=48.0.0",
  "boto3>=1.43.14",
  "email-validator>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/lgtm-hq/podex"
Source = "https://github.com/lgtm-hq/podex"
Issues = "https://github.com/lgtm-hq/podex/issues"

[dependency-groups]
dev = [
  "assertpy>=1.1",
  "fakeredis[lua]>=2.26",
  "httpx>=0.28",
  "lintro==0.81.1",
  "mypy>=1.14",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "types-assertpy>=1.1.0.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/podex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]

[tool.coverage.run]
source = ["src/podex"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
strict = true

# The CI lint image type-checks without runtime deps installed, so SQLAlchemy
# resolves to `Any` and strict `disallow_subclassing_any` rejects the ORM
# declarative base. Scope that one check off for the ORM models only; every
# other strict guarantee stays in force here and locally (where deps resolve).
# Both module spellings are listed because lintro runs mypy with
# `--explicit-package-bases` from the project root (module `src.podex.models.*`)
# while `mypy src` resolves it as `podex.models.*`.
[[tool.mypy.overrides]]
module = ["podex.models.*", "src.podex.models.*"]
disallow_subclassing_any = false

# The CI lint image type-checks without runtime deps installed, so the bare
# `alembic` import name resolves to the local `alembic/` migration directory
# (a namespace package) instead of the installed library. Its runtime-proxy
# attributes (`context`, `op`, `command`) are only available at runtime, so
# mypy reports `attr-defined` on those imports in CI. The imports carry a
# narrow `# type: ignore[attr-defined]`; here we only disable
# `warn_unused_ignores` for these modules so the ignore stays clean locally
# (where deps resolve and the ignore is otherwise unused). Every other strict
# guarantee remains in force. Module spellings cover both `alembic upgrade`
# execution (`env`, `versions.*`) and lint discovery (`alembic.*`, `tests.*`).
[[tool.mypy.overrides]]
module = [
  "env",
  "alembic.env",
  "0001_initial_catalog",
  "versions.*",
  "alembic.versions.*",
  "tests.test_migrations",
]
warn_unused_ignores = false

# boto3 ships no inline types and the stubs are not installed in the CI lint
# image; treat it as untyped rather than pulling in boto3-stubs.
[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.lintro]
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
